[package]
name = "title_grabber_rs"
version = "0.1.0"
authors = ["Cristian Rasch <cristianrasch@fastmail.fm>"]
edition = "2018"

[dependencies]
clap = "~2.33"
num_cpus = "1.0"
lazy_static = "1.3.0"
regex = "1"
reqwest = "0.9.14"
log = "0.4"
simplelog = "^0.5.0"
scraper = "0.10.0"
itertools = "0.8.0"
csv = "1"
serde = "1"
serde_derive = "1"
crossbeam = "0.7"
scoped_threadpool = "0.1.*"
